--- a/2-TimeseriesPrediction/requirements.txt
+++ b/2-TimeseriesPrediction/requirements.txt
@@ -41,6 +41,7 @@ prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.2.0
+PyPrind==2.11.2
 python-dateutil==2.6.0
 pytz==2017.2
 PyYAML==3.12
