--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 2-TimeseriesPrediction/.ipynb_checkpoints/*
 4-OpenStreetMap/.ipynb_checkpoints/*
-5-NILMTK/./*
+5-NILMTK/.ipynb_checkpoints/*
 5-NILMTK/data/*
