--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-2-TimeseriesPrediction/.ipynb_checkpoints/*
-4-OpenStreetMap/.ipynb_checkpoints/*
-5-NILMTK/.ipynb_checkpoints/*
-5-NILMTK/data/*
+*/data/*
+*/ipynb_checkpoints/*
