--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-*/data/*
-*/ipynb_checkpoints/*
+2-TimeseriesPrediction/.ipynb_checkpoints/*
+4-OpenStreetMap/.ipynb_checkpoints/*
+5-NILMTK/.ipynb_checkpoints/*
+5-NILMTK/data/*
+6-Data_Prep_and_Vis/data/*
+6-Data_Prep_and_Vis/.ipynb_checkpoints/*
